Fixed spacing for sidebar info. Okay for now, but we need a better solution than a HTML table.

--- a/shiviz/css/style.css
+++ b/shiviz/css/style.css
@@ -1025,10 +1025,13 @@ svg {
   text-overflow: ellipsis;
 }
 
+/* To help make the line connecting the two
+   circles on the sidebar info */
 #sidebar .info {
   position: absolute;
+  width: 176px;
+  height: 192px;
 }
-
 #sidebar .nodeConnection {
   position: relative;
 }
